--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -73,7 +73,7 @@ var duoshuoQuery = {short_name:"justjavac"};
 
 <section>
     <h3>RSS订阅</h3>
-    本博客源码托管在 <a rel="nofollow" href="https://github.com/justjavac/justjavac.github.com" target="_blank">github</a> 上，因此访问速度不是很快，而且有时会出现打不开的情况（你懂滴），
+    本博客源码托管在 <a rel="nofollow" href="https://github.com/doc5188/doc5188.github.io" target="_blank">github</a> 上，因此访问速度不是很快，而且有时会出现打不开的情况（你懂滴），
         建议大家多使用RSS访问阅读
     <ul id="recent_posts">
       <li><!--以下是QQ邮件列表订阅嵌入代码--><a target="_blank" rel="nofollow" href="http://list.qq.com/cgi-bin/qf_invite?id=2f54986df62b02b3f1cf5da7de51cc06945b798bbb4ead53"><img border="0" alt="填写您的邮件地址，订阅我们的精彩内容：" src="http://rescdn.list.qq.com/zh_CN/htmledition/images/qunfa/manage/picMode_light_s.png" /></a></li>
