--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -82,7 +82,7 @@
 
     </div> <!-- /container -->
 
-    <a class="v-fork-me" href="https://github.com/justjavac/justjavac.github.com" target="_blank" rel="nofollow">
+    <a class="v-fork-me" href="https://github.com/doc5188/doc5188.github.io" target="_blank" rel="nofollow">
       <img src="{{ ASSET_PATH }}/bootstrap/img/forkme_right_darkblue.png" alt="Fork me on GitHub">
     </a>
 
