--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -56,7 +56,7 @@
     <!-- Duoshuo Comment BEGIN -->
     <div id="comments" class="ds-thread"></div>
 <script type="text/javascript">
-var duoshuoQuery = {short_name:"justjavac"};
+var duoshuoQuery = {short_name:"doc5188.com"};
     (function() {
         var ds = document.createElement('script');
         ds.type = 'text/javascript';ds.async = true;
