--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -110,4 +110,6 @@
     </script>
        
   </body>
+<script language="javascript" type="text/javascript" src="http://js.users.51.la/17394111.js"></script>
+<noscript><a href="http://www.51.la/?17394111" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/17394111.asp" style="border:none" /></a></noscript>
 </html>
